--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -22,6 +22,6 @@ jobs:
         with:
           molecule_command: test
           molecule_args: -d docker
-          molecule_working_dir: sudheer-v/atd-ansible
+          molecule_working_dir: sudheer-v/atd-ansible-fix
         env:
           ANSIBLE_FORCE_COLOR: '1'
